# FrameIQ

./: .dockerignore  .gitignore  README.md  SCRIPTS_TO_RUN.md  add_priority_column.py  agents.md  app.py  backfill_genres.py  check_db_data.py  clear_chromadb.py  cloud_run_deployment.md  cookies.txt  implementation_plan.md.resolved  migrate_genres.py  migrate_priority_column.py  migrate_tags.py  migrate_tv_tracking.py  migrate_week2_lists.py  migrate_week2b_lists.py  models.py  pyproject.toml  requirements.txt  test_activity_feed_api.py  test_agent.py  test_review_api.py  test_social_api.py  test_stats_api.py
api/: tmdb_client.py  vector_db.py
migrates/: migrate_comments.py  migrate_lists_diary.py  migrate_week1.py  migrate_week3_reviews.py  migrate_week4_discovery.py
routes/: activity_feed.py  analytics.py  auth.py  chat.py  details.py  diary.py  friends_activity.py  likes.py  lists.py  lists_advanced.py  main.py  media_comments.py  oauth.py  popular_with_friends.py  profile_enhancements.py  recommendations.py  reviews.py  reviews_enhanced.py  social.py  stats.py  tags.py  trending.py  tv_tracking.py  user_discovery.py  watchlist_priorities.py
scripts/: generate_embeddings.py  sync_upcoming_episodes.py
src/: __init__.py
templates/: base.html  chat.html  diary.html  discover_users.html  edit_profile.html  feed.html  feed_enhanced.html  genre.html  index.html  list_detail.html  lists_discover.html  login.html  movie_detail.html  my_lists.html  news.html  profile.html  profile_recommendations.html  recommend.html  register.html  review_feed.html  trending.html  (+18 more)
(+43 files in other folders)
